RESOLVED FIXED316299
[SVG intrinsic sizing] height: max-content uses default width instead of the used width when only a viewBox is present
https://bugs.webkit.org/show_bug.cgi?id=316299
Summary [SVG intrinsic sizing] height: max-content uses default width instead of the ...
Ahmad Saleem
Reported 2026-06-04 03:35:35 PDT
ssia - fixing potential cause of web compat
Attachments
Radar WebKit Bug Importer
Comment 1 2026-06-04 03:35:42 PDT
Ahmad Saleem
Comment 2 2026-06-04 03:38:57 PDT
EWS
Comment 3 2026-06-04 11:01:33 PDT
Committed 314556@main (96eae58972a8): <https://commits.webkit.org/314556@main> Reviewed commits have been landed. Closing PR #66441 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.